--- a/_6_css_cascading_style_stylesheet/bai_tap/create_a_story_direcstory.html
+++ b/_6_css_cascading_style_stylesheet/bai_tap/create_a_story_direcstory.html
@@ -4,6 +4,11 @@
 	<title></title>
 </head>
 <style type="text/css">
+
+	body{
+		background-image: url("5.jpg");
+	}
+	
 	* {
 		margin: 0;
 		padding: 0;
@@ -13,7 +18,7 @@
         width: 1000px;
         height: auto;
         margin-left: 50px;
-        margin-top: 50px; 
+        margin-top: 50px;
 	}
     
     #header{
@@ -25,7 +30,6 @@
 	
 		width: 100%;
 		height: 40px;
-		border: 1px solid #dcdcdc;
 	}
 
 	#menu ul{
@@ -35,7 +39,6 @@
 		float: left;
 		margin-left: 25px;
 		padding: 5px;
-		border: 1px solid #dcdcdc;
 		margin-top: 4px;
 	}
 	#menu a{
@@ -44,8 +47,7 @@
 
 	#content {
 		width: 100%;
-		height: 600px;
-		border: 1px solid #dcdcdc;	
+		height: 600px;	
 	}
 
 	#content-left{
@@ -61,7 +63,6 @@
 		float: left;
 		margin-left: 50px;
 		padding: 5px;
-		border: 1px solid #dcdcdc;
 		margin-top: 20px;
 	}
 	#content-left a{
@@ -87,7 +88,6 @@
 	#footer {
         width: 100%;
         height: 36px;
-		border: 1px solid #dcdcdc;	
 	}	
 	.clear: both;
 
